# rusty-jvm

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  renovate.json  rustfmt.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: big-endian-test.yml  big-endian.yml  claude-code-review.yml  claude-review.yml  claude.yml  clean-up-old-caches.yml  (+6 more)
docs/: architecture.md  bigendian.md  build_integration_tests_data.md  class_static_initialization.md  commit_9e1ada4_summary.md  design-decisions.md  dump_class_files.md  method_handle_trace.md  patch_std_lib.md  threading.md
jclass/: Cargo.toml
jclassfile/: CHANGELOG.md  Cargo.toml  README.md
jclassfile/src/: attributes.rs  class_file.rs  constant_pool.rs  error.rs  extractors.rs  fields.rs  methods.rs
jclassfile/tests/: integration_test.rs
jclassfile/tests/test_data/: Info.java  InvalidCESU8.java  KotlinSourceDebugExtension.kt  Mutf8.java  RuntimeInvisibleParameterAnnotations.java  RuntimeInvisibleTypeAnnotations.java  RuntimeVisibleParameterAnnotations.java  RuntimeVisibleTypeAnnotations.java
jdescriptor/: Cargo.toml  README.md
jdescriptor/src/: lib.rs
jimage-rs/: CHANGELOG.md  Cargo.toml  README.md
jimage-rs/src/: bytes_utils.rs  error.rs  header.rs  jimage.rs  lib.rs  main.rs  raw_jimage.rs  resource_header.rs  resource_name.rs
jimage-rs/tests/: integration_test.rs
jimage-rs/tests/test_data/: README.md
jimage-rs/tests/test_data/jimages/lib/: modules
jimage-rs/tests/test_data/lib/: compressed_big-endian.jimage  compressed_little-endian.jimage  non-compressed_big-endian.jimage  non-compressed_little-endian.jimage  non-valid-magic.jimage
jimage-rs/tests/test_data/mods/: module-info.java
jimage-rs/tests/test_data/mods/java.base/: resource.txt  without_parent.txt
jimage-rs/tests/test_data/mods/java.base/java/lang/: hank.txt  without_ext
jimage-rs/tests/test_data/src/java.base/: module-info.java
jniname/: CHANGELOG.md  Cargo.toml  README.md
jniname/src/: lib.rs
loader/: Cargo.toml
rusty-jar/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
rusty-jar/src/: error.rs  jarfile.rs  lib.rs  main.rs
rusty-jar/tests/: integration_tests.rs
rusty-jar/tests/test_data/hello/: pom.xml
rusty-jvm-vm/: Cargo.toml
src/: argument_parser.rs  attributes.rs  class_file.rs  class_file_parser.rs  constant_pool.rs  error.rs  extractors.rs  fields.rs  lib.rs  main.rs  methods.rs  vm.rs
test_data/: Mutf8.java  Rcrd.java  RuntimeInvisibleAnnotationUsage.java  Shape.java  Trivial.java
tests/: abstract_class_without_interface_implementation.rs  array_class_type.rs  empty_string_in_cpool.rs  integration_test.rs  integration_test_nio_file.rs  integration_tests.rs  integration_tests_file.rs  should_calculate_hashcodes.rs  should_call_interface_default_method.rs  should_call_object_methods.rs  should_check_if_class_is_interface.rs  should_clone_cloneables.rs  should_convert_long_to_double_and_back.rs  should_convert_to_string_and_back.rs  should_do_3d_arrays.rs  should_do_abstract_classes.rs  should_do_adding.rs  should_do_adding_with_longs.rs  should_do_adding_with_negative_longs.rs  should_do_arrays.rs  should_do_arrays_with_longs.rs  should_do_byte_operations.rs  should_do_calculate_fibonacci_iteratively.rs  should_do_calculate_fibonacci_recursively.rs  should_do_class_static_initialization.rs  should_do_class_static_initialization_advanced.rs  should_do_class_static_initialization_circular.rs  should_do_class_static_initialization_multiple_classes.rs  should_do_class_static_initialization_within_one_class.rs  should_do_composite_pattern.rs  should_do_extreme_stack_operations.rs  should_do_extreme_stack_operations_with_longs.rs  should_do_inherited_implementations_interfaces.rs  should_do_inherited_instance_fields.rs  should_do_inherited_static_fields.rs  should_do_interface_and_abstract_class.rs  should_do_native_call_on_system_array_copy.rs  should_do_native_call_on_system_current_time.rs  should_do_operations_with_doubles.rs  should_do_strings_concat_inline.rs  (+35 more)
vm/: Cargo.toml
vm/src/: class_loader.rs  error.rs  helper.rs  lib.rs  util.rs  vm.rs
vm/src/exception/: common.rs  helpers.rs  mod.rs
vm/src/execution_engine/: common.rs  engine.rs  executor.rs  invoker.rs  ldc_resolution_manager.rs  mod.rs  opcode.rs  ops_comparison_processor.rs  ops_constant_processor.rs  ops_control_processor.rs  ops_conversion_processor.rs  ops_extended_processor.rs  ops_load_processor.rs  ops_math_processor.rs  ops_reference_processor.rs  ops_stack_processor.rs  ops_store_processor.rs  reflection_class_loader.rs  static_init.rs  string_pool_helper.rs  system_native_table.rs
vm/src/heap/: heap.rs  java_instance.rs  mod.rs
vm/src/method_area/: attributes_helper.rs  cpool_helper.rs  field.rs  instance_checker.rs  java_class.rs  java_method.rs  method_area.rs  mod.rs  primitives_helper.rs  signature.rs
vm/src/properties/: mod.rs  system_properties.rs
vm/src/stack/: mod.rs  sack_value.rs  stack.rs  stack_frame.rs  stack_frames_util.rs
vm/src/system_native/: class.rs  class_loader.rs  constant_pool.rs  file_descriptor.rs  file_output_stream.rs  io_file_system.rs  method_handle_natives.rs  mod.rs  object.rs  reflect_array.rs  reflecton.rs  stack_trace_element.rs  string.rs  system.rs  system_props_raw.rs  thread.rs  throwable.rs  unix_file.rs  unsafe_.rs  windows_file.rs
vm/src/system_native/method_handle_natives/: common.rs  invocation.rs  member_name.rs  method_type.rs  offsets.rs  resolution.rs  resolved_method_name.rs  wrappers.rs
vm/src/system_native/object_offset/: mod.rs  offset_utils.rs
vm/src/system_native/platform_file/: unix_file.rs  windows_file.rs
vm/src/system_native/platform_file_dispatcher/: mod.rs  unix_file_dispatcher.rs  windows_file_dispatcher.rs
vm/src/system_native/platform_native_dispatcher/: mod.rs  unix_helpers.rs  unix_native_dispatcher.rs  windows_helpers.rs  windows_native_dispatcher.rs
vm/src/system_native/properties_provider/: properties.rs
wiki/: 02_Concurrency_Architecture.md
(+659 files in other folders)
