[package]
name = "rusty-jvm"
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
description = "An implementation of a Java Virtual Machine (JVM)."
documentation = "https://docs.rs/rusty-jvm"
homepage = "https://github.com/hextriclosan/rusty-jvm"
repository = "https://github.com/hextriclosan/rusty-jvm"
readme = "README.md"
keywords = ["jvm", "java", "virtual-machine", "interpreter", "jvm-implementation"]
categories = ["command-line-utilities", "emulators", "virtualization"]
license = "MIT"
exclude = [".*", "docs/**", "tests/**", "utils/**", "Cross.toml", "renovate.json", "rustfmt.toml", "build.rs"]

[workspace]
members = ["jclassfile", "jdescriptor", "jimage-rs"]

[dependencies]
clap = "4.5.53"
getset = "0.1.6"
derive-new = "0.7.0"
once_cell = "1.21.3"
jclassfile = "0.4.0"
jdescriptor = "0.2.0"
jimage-rs = "0.0.4"
indexmap = { version = "2.12.1" , features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
num-traits = "0.2.19"
num_enum = "0.7.5"
murmur3 = "0.5.2"
os_info = { version =  "3.14.0", default-features = false  }
parking_lot = "0.12.5"
libloading = "0.9.0"
path-absolutize = "3.1.1"
bitflags = "2.10.0"
dashmap = { version = "6.1.0", features = ["serde"] }
miniz_oxide = "0.9.0"
crc32fast = "1.5.0"
strum = { version = "0.27.2", features = ["derive"] }
rand = "0.10.0"
page_size = "0.6.0"
memmap2 = "0.9.9"
iana-time-zone = "0.1.64"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "processenv", "minwindef", "fileapi", "winnt", "minwinbase", "securitybaseapi", "processthreadsapi", "sysinfoapi", "winerror", "handleapi", "errhandlingapi", "ntdef"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["fs", "uio"] }
realpath-ext = "0.1.3"

[dev-dependencies]
assert_cmd = "2.1.1"
regex = "1.12.2"
mockall = "0.14.0"
tempfile = "3.24.0"
itertools = "0.14.0"
rstest = "0.26.1"

[build-dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
