[package]
name = "jimage-rs"
version = "0.0.1"
edition = "2021"
description = "A Rust library for reading Java Image (jimage) files, used in the Java Virtual Machine (JVM)."
documentation = "https://docs.rs/jimage-rs"
homepage = "https://github.com/hextriclosan/rusty-jvm"
repository = "https://github.com/hextriclosan/rusty-jvm"
readme = "README.md"
keywords = ["jvm", "java", "jimage", "jigsaw"]
categories = ["command-line-utilities", "parser-implementations"]
license = "MIT"
exclude = ["tests/**"]

workspace = ".."

[dependencies]
memmap2 = "0.9.5"
memchr = "2.7.5"
flate2 = "1.1.2"
thiserror = "2.0.12"
clap = { version = "4.5.40", features = ["derive"] }
