[package]
name = "jimage-rs"
version = "0.0.1"
edition = "2021"
description = "A fast and efficient Rust library for working with jimage files used by the Java Platform Module System."
documentation = "https://docs.rs/jimage-rs"
homepage = "https://github.com/hextriclosan/rusty-jvm"
repository = "https://github.com/hextriclosan/rusty-jvm"
readme = "README.md"
keywords = ["jvm", "java", "jimage", "jigsaw"]
categories = ["command-line-utilities", "parser-implementations"]
license = "MIT"
exclude = ["tests/**"]

workspace = ".."

[dependencies]
memmap2 = "0.9.5"
memchr = "2.7.5"
flate2 = "1.1.2"
snafu = "0.8.6"
clap = { version = "4.5.40", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.25.0"
