[package]
name = "jimage-rs"
version = "0.0.2"
edition = "2021"
rust-version = "1.74"
description = "A fast and efficient Rust library for working with jimage files used by the Java Platform Module System."
documentation = "https://docs.rs/jimage-rs"
homepage = "https://github.com/hextriclosan/rusty-jvm/tree/main/jimage-rs"
repository = "https://github.com/hextriclosan/rusty-jvm"
readme = "README.md"
keywords = ["jvm", "java", "jimage", "jigsaw"]
categories = ["command-line-utilities", "parser-implementations"]
license = "MIT"
exclude = ["tests/**"]

workspace = ".."

[dependencies]
memmap2 = "0.9.7"
memchr = "2.7.5"
flate2 = "1.1.2"
snafu = "0.8.6"
clap = { version = "4.5.45", features = ["derive"] }
byteorder = "1.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.26.1"
