[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
jclass = {path = "../jclass"}
jdescriptor = {path = "../jdescriptor"}
indexmap = { version = "2.6.0" , features = ["serde"]}
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
num-traits = "0.2.19"
murmur3 = "0.5.2"
winapi = { version = "0.3.9", features = ["winbase", "processenv", "minwindef"] }
