[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[dependencies]
jclass = {path = "../jclass"}
jdescriptor = "0.2.0"
indexmap = { version = "2.7.1" , features = ["serde"]}
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
num-traits = "0.2.19"
num_enum = "0.7.3"
murmur3 = "0.5.2"
getset = "0.1.5"
derive-new = "0.7.0"
os_info = { version =  "3.10.0", default-features = false  }
parking_lot = "0.12.3"
libloading = "0.8.6"
path-absolutize = "3.1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "processenv", "minwindef"] }
